--- a/goodluck website.html
+++ b/goodluck website.html
@@ -11,7 +11,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-image: url(image/sky.jpg);
+                background-image: url(sky.jpg);
                 background-position: center;
             }
             .center-text {
